Update Main.java
Update Main.java

Refactor Main to finalize data processing and cleanup

- Rename `getZipArchiveService` to `buildZipArchiveService`.
- Update file paths and variable names for clarity.
- Invoke `addYearAndQuarterColumns` and merge expenses with operator data.
- Extract specific columns to generate the final consolidated CSV.
- Implement `zipFiles` to compress the output.
- Add `deleteDirectoryFromProjectRoot` to clean up temporary directories.
- Optimize imports.