@@ -1,107 +1,179 @@
 package com;
 
-import com.support.CsvDataTransformationService;
-import com.support.CsvFileProcessor;
-import com.support.QuarterlyReportUrlScraper;
-import com.support.ZipArchiveService;
+import com.support.*;
 import com.support.enums.MathOperation;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Stream;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
 
 public class Main {
 
   public static void main(String[] args) throws IOException {
 
-    // URL base onde estão os diretórios anuais dos relatórios
-    ZipArchiveService zipService = getZipArchiveService();
+    ZipArchiveService zipService = buildZipArchiveService();
     zipService.downloadAndExtractArchives();
 
-    // Serviço responsável por filtrar, juntar e deduplicar arquivos CSV
-    CsvFileProcessor csvProcessor = new CsvFileProcessor();
-
-    // Diretório onde os arquivos ZIP foram extraídos
     Path extractDir = Path.of(System.getProperty("user.dir"), "extract");
 
-    // Lista todos os arquivos extraídos
     List<Path> extractedFiles;
     try (Stream<Path> paths = Files.list(extractDir)) {
       extractedFiles = paths.filter(Files::isRegularFile).toList();
     }
 
-    // Filtra os CSVs pela coluna DESCRICAO com o valor desejado
+    CsvFileProcessor csvProcessor = new CsvFileProcessor();
+
     csvProcessor.filterCsvFilesByColumnValue(
         extractedFiles, "DESCRICAO", "Despesas com Eventos/Sinistros", ";");
 
-    // Diretório onde ficaram os arquivos filtrados
     Path filteredDir = csvProcessor.getFilteredOutputDir();
 
-    // Lista os arquivos filtrados para concatenação
     List<Path> filteredFiles;
     try (Stream<Path> paths = Files.list(filteredDir)) {
       filteredFiles = paths.filter(Files::isRegularFile).toList();
     }
 
-    // Concatena os CSVs filtrados em um único arquivo
     csvProcessor.mergeCsvFiles(filteredFiles);
 
-    // Diretório onde o CSV consolidado foi salvo
     Path preProcessedDir = csvProcessor.getPreProcessedOutputDir();
+    Path consolidatedFile = preProcessedDir.resolve("quarters_by_description.csv");
 
-    // Arquivo final consolidado dos trimestres
-    Path consolidatedFile = preProcessedDir.resolve("consolidated_quarters_by_description.csv");
-
-    // Remove linhas duplicadas mantendo a primeira ocorrência
     csvProcessor.removeDuplicateLines(consolidatedFile, true);
 
-    // Diretório extra com dados externos (ex: operadoras)
-    Path extraFilesDir = Paths.get(System.getProperty("user.dir"), "extra_files");
-
-    // Arquivo externo que também precisa ser deduplicado
+    Path extraFilesDir = Path.of(System.getProperty("user.dir"), "extra_files");
     Path operatorsFile = extraFilesDir.resolve("dados operadoras.csv");
 
-    // Remove duplicatas do arquivo de operadoras
     csvProcessor.removeDuplicateLines(operatorsFile, true);
 
     CsvDataTransformationService csvService = new CsvDataTransformationService();
 
-    Path csvToValidator = preProcessedDir.resolve("unique_dados operadoras.csv");
+    Path validatedOperators = preProcessedDir.resolve("unique_dados operadoras.csv");
 
     csvService.validateColumnByRegex(
-        csvToValidator, "CNPJ", "^\\d{2}\\.?\\d{3}\\.?\\d{3}\\/?\\d{4}-?\\d{2}$", ";");
+        validatedOperators, "CNPJ", "^\\d{2}\\.?\\d{3}\\.?\\d{3}\\/?\\d{4}-?\\d{2}$", ";");
 
-    Path csvToCalculate =
-        preProcessedDir.resolve("unique_consolidated_quarters_by_description.csv");
+    Path expensesCsv = preProcessedDir.resolve("unique_quarters_by_description.csv");
 
     csvService.calculateNewColumn(
-        csvToCalculate,
+        expensesCsv,
         "VL_SALDO_FINAL",
         "VL_SALDO_INICIAL",
-        "ValorDespesas",
+        "VALOR_DESPESAS",
         MathOperation.SUBTRACT,
         ";");
 
+    Path calculatedDir = csvService.getCalculatedFilesDir();
+    Path validatedDir = csvService.getValidatedFilesDir();
 
-    Path calculated_dir = csvService.getCalculetedFilesDir();
-    Path validated_dir = csvService.getValidatedFilesDir();
+    csvService.addYearAndQuarterColumns(
+        calculatedDir.resolve("unique_quarters_by_description.csv"), "DATA", ";");
 
-    Path leftFile = calculated_dir.resolve("calculated_unique_consolidated_quarters_by_description.csv");
-    Path rigthFile = validated_dir.resolve("validated_unique_dados operadoras.csv");
+    Path leftFile = calculatedDir.resolve("new_unique_quarters_by_description.csv");
 
-    csvService.mergeCsvByKey(leftFile, rigthFile, "REG_ANS", "REGISTRO_OPERADORA", ";");
+    Path rightFile = validatedDir.resolve("unique_dados operadoras.csv");
+
+    csvService.mergeCsvByKey(leftFile, rightFile, "REG_ANS", "REGISTRO_OPERADORA", ";");
+
+    Path mergedDir = csvService.getMergedFilesDir();
+
+    Path mergedFile =
+        mergedDir.resolve("new_unique_quarters_by_description_unique_dados operadoras.csv");
+
+    csvService.extractColumns(
+        mergedFile,
+        List.of(
+            "DATA",
+            "CNPJ",
+            "RAZAO_SOCIAL",
+            "DESCRICAO",
+            "TRIMESTRE",
+            "ANO",
+            "VALOR_DESPESAS",
+            "REG_ANS",
+            "MODALIDADE",
+            "UF",
+            "CNPJ_VALIDO",
+            "OBSERVACAO"),
+        ";");
+
+    zipFiles(Path.of("output", "consolidado_despesas.csv"));
+
+    deleteDirectoryFromProjectRoot("validated_files");
+    deleteDirectoryFromProjectRoot("merged_files");
+    deleteDirectoryFromProjectRoot("calculated_files");
+    deleteDirectoryFromProjectRoot("filtered_files");
+    deleteDirectoryFromProjectRoot("pre_processed_files");
   }
 
-  private static ZipArchiveService getZipArchiveService() throws IOException {
-    String BASE_URL = "https://dadosabertos.ans.gov.br/FTP/PDA/demonstracoes_contabeis/";
+  private static ZipArchiveService buildZipArchiveService() throws IOException {
 
-    // Descobre os N relatórios trimestrais mais recentes disponíveis no site
+    String baseUrl = "https://dadosabertos.ans.gov.br/FTP/PDA/demonstracoes_contabeis/";
+
     QuarterlyReportUrlScraper scraper = new QuarterlyReportUrlScraper();
-    List<String> recentReportLinks = scraper.fetchLatestQuarterReportUrls(BASE_URL, 3);
+    List<String> reports = scraper.fetchLatestQuarterReportUrls(baseUrl, 3);
 
-    // Faz o download dos ZIPs encontrados e extrai os arquivos localmente
-    return new ZipArchiveService(BASE_URL, recentReportLinks);
+    return new ZipArchiveService(baseUrl, reports);
+  }
+
+  public static void deleteDirectoryFromProjectRoot(String folderName) throws IOException {
+
+    Path dir = Path.of(System.getProperty("user.dir"), folderName);
+
+    if (!Files.exists(dir)) return;
+
+    Files.walk(dir)
+        .sorted(Comparator.reverseOrder())
+        .forEach(
+            path -> {
+              try {
+                Files.delete(path);
+              } catch (IOException e) {
+                throw new RuntimeException("Erro ao apagar: " + path, e);
+              }
+            });
+  }
+
+  public static Path zipFiles(Path sourcePath) throws IOException {
+
+    if (!Files.exists(sourcePath)) {
+      throw new IllegalArgumentException("Caminho não existe: " + sourcePath);
+    }
+
+    String baseName = sourcePath.getFileName().toString().replace(".csv", "");
+
+    Path zipPath = sourcePath.getParent().resolve(baseName + ".zip");
+
+    try (ZipOutputStream zos = new ZipOutputStream(Files.newOutputStream(zipPath))) {
+
+      if (Files.isDirectory(sourcePath)) {
+
+        Files.walk(sourcePath)
+            .filter(Files::isRegularFile)
+            .forEach(
+                path -> {
+                  try {
+                    Path relative = sourcePath.relativize(path);
+                    ZipEntry entry = new ZipEntry(sourcePath.getFileName() + "/" + relative);
+
+                    zos.putNextEntry(entry);
+                    Files.copy(path, zos);
+                    zos.closeEntry();
+
+                  } catch (IOException e) {
+                    throw new RuntimeException(e);
+                  }
+                });
+
+      } else {
+        zos.putNextEntry(new ZipEntry(sourcePath.getFileName().toString()));
+        Files.copy(sourcePath, zos);
+        zos.closeEntry();
+      }
+    }
+
+    return zipPath;
   }
 }
